// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExchangeByBlockchain renders correctly with button 1`] = `
<styled.div>
  <styled.div
    marginBottom="10px"
  >
    <text
      color="blue900"
      size="24px"
      weight={600}
    >
      <FormattedMessage
        defaultMessage="Trading your crypto doesn't mean trading away control."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.trading_your_crypto"
        values={Object {}}
      />
    </text>
  </styled.div>
  <styled.div
    marginBottom="24px"
  >
    <styled.text
      size="14px"
    >
      <FormattedMessage
        defaultMessage="November 2018"
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.november2018"
        values={Object {}}
      />
    </styled.text>
  </styled.div>
  <styled.div
    marginBottom="24px"
  >
    <styled.text>
      <FormattedMessage
        defaultMessage="Swap enables you to trade crypto with the best prices and quick settlement, all while maintaining full control of your funds."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.swap_enables_trade"
        values={Object {}}
      />
    </styled.text>
  </styled.div>
  <styled.div
    marginBottom="8px"
  >
    <styled.text>
      <styled.text>
        <FormattedMessage
          defaultMessage="Low fees"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.low_fees"
          values={Object {}}
        />
      </styled.text>
      <styled.text
        hideOnMobile={true}
      >
         - 
      </styled.text>
      <FormattedMessage
        defaultMessage="Great news! Get the best prices without having to leave the security of your Wallet."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.best_prices"
        values={Object {}}
      />
    </styled.text>
  </styled.div>
  <styled.div
    marginBottom="8px"
  >
    <styled.text>
      <styled.text>
        <FormattedMessage
          defaultMessage="Higher Limits"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.higher_limits"
          values={Object {}}
        />
      </styled.text>
      <styled.text
        hideOnMobile={true}
      >
         - 
      </styled.text>
      <FormattedMessage
        defaultMessage="Like to trade big? Get access to limits of up to $25,000 per day."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.trade_big"
        values={Object {}}
      />
    </styled.text>
  </styled.div>
  <styled.div
    marginBottom="32px"
  >
    <styled.text>
      <styled.text>
        <FormattedMessage
          defaultMessage="Easy to use"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.easy_to_use"
          values={Object {}}
        />
      </styled.text>
      <styled.text
        hideOnMobile={true}
      >
         - 
      </styled.text>
      <FormattedMessage
        defaultMessage="Get started in just a few steps."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.get_started"
        values={Object {}}
      />
    </styled.text>
  </styled.div>
  <styled.div>
    <styled.button>
      <FormattedMessage
        defaultMessage="Get Started"
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.started"
        values={Object {}}
      />
    </styled.button>
  </styled.div>
</styled.div>
`;

exports[`ExchangeByBlockchain renders correctly with exchange link 1`] = `
<styled.div>
  <styled.div
    marginBottom="10px"
  >
    <text
      color="blue900"
      size="24px"
      weight={600}
    >
      <FormattedMessage
        defaultMessage="Trading your crypto doesn't mean trading away control."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.trading_your_crypto"
        values={Object {}}
      />
    </text>
  </styled.div>
  <styled.div
    marginBottom="24px"
  >
    <styled.text
      size="14px"
    >
      <FormattedMessage
        defaultMessage="November 2018"
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.november2018"
        values={Object {}}
      />
    </styled.text>
  </styled.div>
  <styled.div
    marginBottom="24px"
  >
    <styled.text>
      <FormattedMessage
        defaultMessage="Swap enables you to trade crypto with the best prices and quick settlement, all while maintaining full control of your funds."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.swap_enables_trade"
        values={Object {}}
      />
    </styled.text>
  </styled.div>
  <styled.div
    marginBottom="8px"
  >
    <styled.text>
      <styled.text>
        <FormattedMessage
          defaultMessage="Low fees"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.low_fees"
          values={Object {}}
        />
      </styled.text>
      <styled.text
        hideOnMobile={true}
      >
         - 
      </styled.text>
      <FormattedMessage
        defaultMessage="Great news! Get the best prices without having to leave the security of your Wallet."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.best_prices"
        values={Object {}}
      />
    </styled.text>
  </styled.div>
  <styled.div
    marginBottom="8px"
  >
    <styled.text>
      <styled.text>
        <FormattedMessage
          defaultMessage="Higher Limits"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.higher_limits"
          values={Object {}}
        />
      </styled.text>
      <styled.text
        hideOnMobile={true}
      >
         - 
      </styled.text>
      <FormattedMessage
        defaultMessage="Like to trade big? Get access to limits of up to $25,000 per day."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.trade_big"
        values={Object {}}
      />
    </styled.text>
  </styled.div>
  <styled.div
    marginBottom="32px"
  >
    <styled.text>
      <styled.text>
        <FormattedMessage
          defaultMessage="Easy to use"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.easy_to_use"
          values={Object {}}
        />
      </styled.text>
      <styled.text
        hideOnMobile={true}
      >
         - 
      </styled.text>
      <FormattedMessage
        defaultMessage="Get started in just a few steps."
        id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.get_started"
        values={Object {}}
      />
    </styled.text>
  </styled.div>
  <styled.div>
    <withRouter(LinkContainer)
      to="/swap"
    >
      <styled.button>
        <FormattedMessage
          defaultMessage="Swap Now"
          id="layouts.wallet.trayright.whatsnew.whatsnewcontent.exchangebyblockchain.swapnow"
          values={Object {}}
        />
      </styled.button>
    </withRouter(LinkContainer)>
  </styled.div>
</styled.div>
`;
